Modified search fucntionallity so it acepts list facilities of properties and/or unit and max price for filtering